force-app/main/default/objects/Client_Experience__c/Client_Experience__c.object-meta.xml
<CustomObject>
    <description>Object to track the client experience and to parent the fulfillments.</description>
    <label>Client Experience</label>
    <nameField>
        <label>Client Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>