force-app/main/default/objects/Client_Experience__c/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions__c</fullName>
    <description>Active Subscription Products (Subscriptions not closed or cancelled)</description>
    <inlineHelpText>Active Subscription Products (Subscriptions not closed or cancelled)</inlineHelpText>
    <label>Active Subscriptions</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>