force-app/main/default/objects/Client_Experience__c/fields/AM_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Full_Name__c</fullName>
    <description>AM on order</description>
    <formula>Related_Order__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.FirstName + &quot; &quot; + Related_Order__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Full Name</label>
    <type>Text</type>
</CustomField>