force-app/main/default/objects/Client_Experience__c/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <description>Contact Assistant Email</description>
    <formula>Related_Contact__r.Assistant_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Email</label>
    <type>Text</type>
</CustomField>