force-app/main/default/objects/Client_Experience__c/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <description>Contact Assistant Name</description>
    <formula>Related_Contact__r.AssistantName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Name</label>
    <type>Text</type>
</CustomField>