force-app/main/default/objects/Client_Experience__c/fields/Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Phone__c</fullName>
    <description>Contact Assistant Phone</description>
    <formula>Related_Contact__r.Assistant_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Phone</label>
    <type>Text</type>
</CustomField>