force-app/main/default/objects/Client_Experience__c/fields/Client_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Address_2__c</fullName>
    <description>Address 2 from Contact</description>
    <formula>Related_Contact__r.ACDF_Company_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Address 2 from Contact</inlineHelpText>
    <label>Client Address 2</label>
    <type>Text</type>
</CustomField>