force-app/main/default/objects/Client_Experience__c/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <description>Contact Mailing Street</description>
    <formula>Related_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Address</label>
    <type>Text</type>
</CustomField>