force-app/main/default/objects/Client_Experience__c/fields/Client_City__c.field-meta.xml
<CustomField>
    <fullName>Client_City__c</fullName>
    <description>Contact Mailing City</description>
    <formula>Related_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client City</label>
    <type>Text</type>
</CustomField>