force-app/main/default/objects/Client_Experience__c/fields/Client_Company__c.field-meta.xml
<CustomField>
    <fullName>Client_Company__c</fullName>
    <description>Contact Company &quot;ACDF_Branch_Office__c&quot;</description>
    <formula>Related_Contact__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Company</label>
    <type>Text</type>
</CustomField>