force-app/main/default/objects/Client_Experience__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <description>Contact Email</description>
    <formula>Related_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Email</label>
    <type>Text</type>
</CustomField>