force-app/main/default/objects/Client_Experience__c/fields/Client_Experience_Owner__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSR who is responsible for this client experience</description>
    <inlineHelpText>CSR who is responsible for this client experience</inlineHelpText>
    <label>Client Experience Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>