force-app/main/default/objects/Client_Experience__c/fields/Client_Experience_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Owner_Email__c</fullName>
    <description>CSR Email</description>
    <formula>Client_Experience_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSR Email</inlineHelpText>
    <label>Client Experience Owner Email</label>
    <type>Text</type>
</CustomField>