force-app/main/default/objects/Client_Experience__c/fields/Client_Experience_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Owner_Full_Name__c</fullName>
    <description>Client Experience Owner Full Name</description>
    <formula>(Client_Experience_Owner__r.FirstName + &quot; &quot; + Client_Experience_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Experience Owner Full Name</label>
    <type>Text</type>
</CustomField>