force-app/main/default/objects/Client_Experience__c/fields/Client_Experience_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Owner_Phone__c</fullName>
    <description>CSR Phone</description>
    <formula>Client_Experience_Owner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSR Phone</inlineHelpText>
    <label>Client Experience Owner Phone</label>
    <type>Text</type>
</CustomField>