force-app/main/default/objects/Client_Experience__c/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <description>Contact First Name</description>
    <formula>Related_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client First Name</label>
    <type>Text</type>
</CustomField>