force-app/main/default/objects/Client_Experience__c/fields/Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Full_Name__c</fullName>
    <description>Contact Full Name</description>
    <formula>Related_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Full Name</label>
    <type>Text</type>
</CustomField>