force-app/main/default/objects/Client_Experience__c/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <description>Contact Last Name</description>
    <formula>Related_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Last Name</label>
    <type>Text</type>
</CustomField>