force-app/main/default/objects/Client_Experience__c/fields/Client_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Client_Mobile__c</fullName>
    <description>Contact Mobile</description>
    <formula>Related_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Mobile</label>
    <type>Text</type>
</CustomField>