force-app/main/default/objects/Client_Experience__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <description>Contact Phone</description>
    <formula>Related_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Phone</label>
    <type>Text</type>
</CustomField>