force-app/main/default/objects/Client_Experience__c/fields/Client_State__c.field-meta.xml
<CustomField>
    <fullName>Client_State__c</fullName>
    <description>Contact Mailing State</description>
    <formula>Related_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client State</label>
    <type>Text</type>
</CustomField>