force-app/main/default/objects/Client_Experience__c/fields/Client_Title__c.field-meta.xml
<CustomField>
    <fullName>Client_Title__c</fullName>
    <description>Contact Display Title</description>
    <formula>Related_Contact__r.Display_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Display Title</inlineHelpText>
    <label>Client Title</label>
    <type>Text</type>
</CustomField>