force-app/main/default/objects/Client_Experience__c/fields/Client_Website__c.field-meta.xml
<CustomField>
    <fullName>Client_Website__c</fullName>
    <description>Contact Website</description>
    <formula>Related_Contact__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Website</label>
    <type>Text</type>
</CustomField>