force-app/main/default/objects/Client_Experience__c/fields/Client_Zip__c.field-meta.xml
<CustomField>
    <fullName>Client_Zip__c</fullName>
    <description>Contact Mailing Postal Code</description>
    <formula>Related_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Zip</label>
    <type>Text</type>
</CustomField>