force-app/main/default/objects/Client_Experience__c/fields/CSR_Sumo_Link__c.field-meta.xml
<CustomField>
    <fullName>CSR_Sumo_Link__c</fullName>
    <description>Client Experience Owner SUMO Link</description>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hknrUAA&amp;ContactID=&quot;+ Related_Contact_SF_ID__c +&quot;&amp;PID=&quot;+ Client_Experience_Owner__r.Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Sumo Link</label>
    <type>Text</type>
</CustomField>