force-app/main/default/objects/Client_Experience__c/fields/Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Code__c</fullName>
    <description>Contact Login Code for Web App</description>
    <formula>Related_Contact__r.Login_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login Code</label>
    <type>Text</type>
</CustomField>