force-app/main/default/objects/Client_Experience__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market on Order</description>
    <formula>Related_Order__r.kugo2p__Opportunity__r.Market_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>