force-app/main/default/objects/Client_Experience__c/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>CSR Next Action Date</description>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>