force-app/main/default/objects/Client_Experience__c/fields/Open_Fulfillments__c.field-meta.xml
<CustomField>
    <fullName>Open_Fulfillments__c</fullName>
    <label>Open Fulfillments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>