force-app/main/default/objects/Client_Experience__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>Contact Core Profession</description>
    <formula>Related_Contact__r.Core_Profession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession</label>
    <type>Text</type>
</CustomField>