force-app/main/default/objects/Client_Experience__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact related to the client experience</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Experiences</relationshipLabel>
    <relationshipName>Client_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>