force-app/main/default/objects/Client_Experience__c/fields/Related_Contact_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_SF_ID__c</fullName>
    <description>Related Contact SF ID</description>
    <formula>Related_Contact__r.SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related Contact SF ID</inlineHelpText>
    <label>Related Contact SF ID</label>
    <type>Text</type>
</CustomField>