force-app/main/default/objects/Client_Experience__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Order</description>
    <label>Related Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Client Experiences</relationshipLabel>
    <relationshipName>Client_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>