force-app/main/default/objects/Client_Experience__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Order ship to street long</description>
    <formula>Related_Order__r.kugo2p__ShipToStreetLong__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shipping address from order</inlineHelpText>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>