force-app/main/default/objects/Client_Experience__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <description>Order ship to city</description>
    <formula>Related_Order__r.kugo2p__ShipToCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order shipping city</inlineHelpText>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>