force-app/main/default/objects/Client_Experience__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <description>Order ship to state province</description>
    <formula>Related_Order__r.kugo2p__ShipToStateProvince__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order shipping state</inlineHelpText>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>