force-app/main/default/objects/Client_Experience__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <description>Order ship to zip postal code</description>
    <formula>Related_Order__r.kugo2p__ShipToZipPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order shipping zip</inlineHelpText>
    <label>Shipping Zip</label>
    <type>Text</type>
</CustomField>