force-app/main/default/objects/Client_Experience__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>CSR experience status</description>
    <inlineHelpText>CSR experience status</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>1st Appt Request</fullName>
            </value>
            <value>
                <fullName>2nd Appt Request</fullName>
            </value>
            <value>
                <fullName>3rd Appt Request</fullName>
            </value>
            <value>
                <fullName>4th Appt Request</fullName>
            </value>
            <value>
                <fullName>Appt Scheduled</fullName>
            </value>
            <value>
                <fullName>Appt Complete - Follow Up Needed</fullName>
            </value>
            <value>
                <fullName>Appt Incomplete - Follow Up Needed</fullName>
            </value>
            <value>
                <fullName>Client_Experience_Complete</fullName>
                <label>Client Experience Complete</label>
            </value>
            <value>
                <fullName>Closed - NOT complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>