force-app/main/default/objects/Client_Experience__c/fields/Web_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_URL__c</fullName>
    <description>Contact web account url</description>
    <formula>Related_Contact__r.Web_Account_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Account URL</label>
    <type>Text</type>
</CustomField>