force-app/main/default/objects/Client_Experience__c/fields/Web_Username__c.field-meta.xml
<CustomField>
    <fullName>Web_Username__c</fullName>
    <description>Contact Web Username for Web App</description>
    <formula>Related_Contact__r.Web_Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Username</label>
    <type>Text</type>
</CustomField>