force-app/main/default/objects/Client_Experience__c/listViews/Active_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Active_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Related_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Action_Date__c</columns>
    <columns>Active_Subscriptions__c</columns>
    <columns>Client_Experience_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Subscriptions__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>Active Subscriptions</label>
</ListView>