force-app/main/default/objects/Client_Experience__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Contact__c</columns>
    <columns>Market__c</columns>
    <columns>Status__c</columns>
    <columns>Web_Account_URL__c</columns>
    <columns>Client_Experience_Owner__c</columns>
    <columns>AM_Full_Name__c</columns>
    <columns>Order_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>