force-app/main/default/objects/Client_Experience__c/listViews/Open_Fulfillments.listView-meta.xml
<ListView>
    <fullName>Open_Fulfillments</fullName>
    <columns>NAME</columns>
    <columns>Related_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Action_Date__c</columns>
    <columns>Open_Fulfillments__c</columns>
    <columns>Client_Experience_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Open_Fulfillments__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>Open Fulfillments</label>
</ListView>